--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,17 @@
   </head>
   <body>
     <script type="module" src="https://molab-itp.github.io/p5moRelease/lib/47/a_lib.js"></script>
-    <!-- <script type="module" src="../../lib/a_lib.js?v=4"></script> -->
+    <!-- <script type="module" src="../../lib/a_lib.js?v=5"></script> -->
 
-    <!-- <script src="Anim.js?v=4"></script> -->
-    <!-- <script src="Rect.js?v=4"></script> -->
-    <!-- <script src="RefBox.js?v=4"></script> -->
+    <script type="module" src="./lib/Anim.js?v=5"></script>
+    <script type="module" src="./lib/Pane.js?v=5"></script>
+    <script type="module" src="./lib/Rect.js?v=5"></script>
+    <script type="module" src="./lib/RefBox.js?v=5"></script>
 
-    <script src="astro_setup.js?v=4"></script>
-    <script src="astro_mouse.js?v=4"></script>
-    <script src="refBox_init.js?v=4"></script>
-    <script src="ui_init.js?v=4"></script>
-    <script src="a_sketch.js?v=4"></script>
+    <script src="astro_setup.js?v=5"></script>
+    <script src="astro_mouse.js?v=5"></script>
+    <script src="refBox_init.js?v=5"></script>
+    <script src="ui_init.js?v=5"></script>
+    <script src="a_sketch.js?v=5"></script>
   </body>
 </html>
