--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
     <script type="module" src="./nlib/Rect.js?v=7"></script>
     <script type="module" src="./nlib/RefBox.js?v=7"></script>
 
+    <!-- <script type="module" src="./lib/Anim.js?v=7"></script>
+    <script type="module" src="./lib/Pane.js?v=7"></script>
+    <script type="module" src="./lib/Rect.js?v=7"></script>
+    <script type="module" src="./lib/RefBox.js?v=7"></script> -->
+
     <script src="astro_setup.js?v=7"></script>
     <script src="astro_mouse.js?v=7"></script>
     <script src="refBox_init.js?v=7"></script>
