--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,27 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <!-- <script type="module" src="https://unpkg.com/itp-molib@0.2.37/dist/moLib.esm.js"></script> -->
+    <script type="module" src="https://unpkg.com/itp-molib@0.2.37/dist/moLib.esm.js"></script>
     <!-- <script type="module" src="https://molab-itp.github.io/p5moRelease/lib/47/a_lib.js"></script> -->
     <!-- <script type="module" src="../../lib/a_lib.js?v=7"></script> -->
 
-    <script type="module" src="./nlib/Anim.js?v=7"></script>
-    <script type="module" src="./nlib/Pane.js?v=7"></script>
-    <script type="module" src="./nlib/Rect.js?v=7"></script>
-    <script type="module" src="./nlib/RefBox.js?v=7"></script>
+    <!-- <script type="module" src="./lib/Pane.js?v=7"></script> -->
 
-    <!-- <script type="module" src="./lib/Anim.js?v=7"></script>
-    <script type="module" src="./lib/Pane.js?v=7"></script>
-    <script type="module" src="./lib/Rect.js?v=7"></script>
-    <script type="module" src="./lib/RefBox.js?v=7"></script> -->
+    <script type="module" src="./nlib/Pane.js?v=7"></script>
+
+    <!-- <script type="module" src="./nlib/Anim.js?v=7"></script> -->
+    <!-- <script type="module" src="./nlib/Rect.js?v=7"></script> -->
+    <!-- <script type="module" src="./nlib/RefBox.js?v=7"></script> -->
+
+    <!-- <script type="module" src="./lib/Anim.js?v=7"></script> -->
+    <!-- <script type="module" src="./lib/Pane.js?v=7"></script> -->
+    <!-- <script type="module" src="./lib/Rect.js?v=7"></script> -->
+    <!-- <script type="module" src="./lib/RefBox.js?v=7"></script> -->
 
     <script src="astro_setup.js?v=7"></script>
     <script src="astro_mouse.js?v=7"></script>
     <script src="refBox_init.js?v=7"></script>
-    <script src="ui_init.js?v=7"></script>
+    <script src="create_ui.js?v=7"></script>
     <script src="setup_dbase.js?v=9"></script>
     <script src="a_sketch.js?v=7"></script>
   </body>
