--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>?v=11 Astronomical</title>
+    <title>?v=12 Astronomical</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script> -->
@@ -11,23 +11,23 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <script type="module" src="https://unpkg.com/itp-molib@0.2.38/dist/moLib.esm.js"></script>
+    <script type="module" src="https://unpkg.com/itp-molib@0.2.39/dist/moLib.esm.js"></script>
     <!-- <script type="module" src="https://molab-itp.github.io/p5moRelease/lib/47/a_lib.js"></script> -->
-    <!-- <script type="module" src="../../lib/a_lib.js?v=11"></script> -->
 
-    <!-- <script type="module" src="./lib/Pane.js?v=11"></script> -->
-    <!-- <script type="module" src="./nlib/Pane.js?v=11"></script> -->
+    <!-- <script type="module" src="./nlib/RefBox.js?v=12"></script> -->
+    <!-- <script type="module" src="./nlib/Pane.js?v=12"></script> -->
 
-    <!-- <script type="module" src="./lib/Anim.js?v=11"></script> -->
-    <!-- <script type="module" src="./lib/Pane.js?v=11"></script> -->
-    <!-- <script type="module" src="./lib/Rect.js?v=11"></script> -->
-    <!-- <script type="module" src="./lib/RefBox.js?v=11"></script> -->
+    <!-- <script type="module" src="./lib/Anim.js?v=12"></script> -->
+    <!-- <script type="module" src="./lib/Pane.js?v=12"></script> -->
+    <!-- <script type="module" src="./lib/Rect.js?v=12"></script> -->
+    <!-- <script type="module" src="./lib/RefBox.js?v=12"></script> -->
 
-    <script src="astro_setup.js?v=11"></script>
-    <script src="astro_mouse.js?v=11"></script>
-    <script src="refBox_init.js?v=11"></script>
-    <script src="create_ui.js?v=11"></script>
-    <script src="setup_dbase.js?v=11"></script>
-    <script src="a_sketch.js?v=11"></script>
+    <script src="a-my_setup.js?v=12"></script>
+    <script src="create_pane.js?v=12"></script>
+    <script src="create_ui.js?v=12"></script>
+    <script src="mouse.js?v=12"></script>
+    <script src="refBox_init.js?v=12"></script>
+    <script src="setup_dbase.js?v=12"></script>
+    <script src="a_sketch.js?v=12"></script>
   </body>
 </html>
