--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <script type="module" src="https://unpkg.com/itp-molib@0.2.43/dist/moLib.esm.js"></script>
     <!-- <script type="module" src="https://molab-itp.github.io/p5moRelease/lib/47/a_lib.js"></script> -->
 
-    <!-- <script type="module" src="./nlib/Pane.js?v=14"></script> -->
-    <!-- <script type="module" src="./nlib/RefBox.js?v=14"></script> -->
-    <!-- <script type="module" src="./nlib/Anim.js?v=14"></script> -->
-    <!-- <script type="module" src="./nlib/Rect.js?v=14"></script> -->
+    <!-- <script type="module" src="../nlib/Pane.js?v=14"></script> -->
+    <!-- <script type="module" src="../nlib/RefBox.js?v=14"></script> -->
+    <!-- <script type="module" src="../nlib/Anim.js?v=14"></script> -->
+    <!-- <script type="module" src="../nlib/Rect.js?v=14"></script> -->
 
     <script src="a-my_setup.js?v=14"></script>
     <script src="create_pane.js?v=14"></script>
